2006-08-26  Raja R Harinath  <rharinath@novell.com>

	* test/slist.c (verify_sort): Verify the length of the list too.
	(test_slist_sort): Free the correct list.
	* test/list.c: Likewise.
	* src/sort.frag.h (MAX_DIGITS): Rename from N_DIGITS.
	(combine_sort): Change 'max_pos' argument to more natural
	'n_digits'.
	(increment): Likewise.  Use 'n_digits' to avoid reading at an
	offset that hasn't been initialized.
	(do_sort): Remove memset.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TODO:
	* test/file.c:
	* src/glib.h:
	* src/gfile.c: implement g_file_open_tmp.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TODO:
	* src/glib.h:
	* src/gdate.c: New file.
	* src/gfile.c: New file.
	* src/Makefile.am: implemented g_file_get_contents and
	g_get_current_time.

	* test/tests.h:
	* test/file.c: New file.
	* test/Makefile.am: tests for the above.

2006-08-26  Raja R Harinath  <rharinath@novell.com>

	* src/sort.frag.h: Add copyright notice and some explanation.
	(increment): Remove null check.
	(combine_digits): Add 'list' argument to seed the summation.
	(do_sort): Use the empty or singleton tail as the seed, rather
	than calling 'increment'.

2006-08-25  Raja R Harinath  <rharinath@novell.com>

	* TODO: Remove 'List' entries.
	* src/Makefile.am (libeglib_la_SOURCES): Add sort.frag.h.
	* src/sort.frag.h: New.  Implements a "generic" bottom-up "counting"
	mergesort that works both on singly- and doubly-linked lists.
	* src/gslist.c (g_slist_sort): Use it.
	* src/glist.c (g_list_sort): Likewise.
	* src/glib.h (g_slist_sort, g_list_sort): Declare.
	* test/slist.c, test/list.c: Add basic testcases.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/gspawn.c: propagate errors from reads.
	* src/gpath.c: an empty PATH is like a NULL one.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/tests.h:
	* test/timer.c:
	* test/Makefile.am:
	* TODO:
	* src/glib.h:
	* src/gtimer.c:
	* src/Makefile.am: implemented GTimer.
