@@ -339,7 +339,7 @@ static gboolean verify_sort (GList *list, int len)
 RESULT
 test_list_sort ()
 {
-	int i = 0;
+	int i, j, mul;
 	GList *list = NULL;
 
 	for (i = 0; i < N_ELEMS; ++i)
@@ -367,6 +367,19 @@ test_list_sort ()
 	list = g_list_sort (list, intcompare);
 	if (!verify_sort (list, 2*N_ELEMS-1))
 		return FAILED ("alternating list");
+
+	g_list_free (list);
+
+	list = NULL;
+	mul = 1;
+	for (i = 1; i < N_ELEMS; ++i) {
+		mul = -mul;
+		for (j = 0; j < i; ++j)
+			list = g_list_prepend (list, GINT_TO_POINTER (mul * j));
+	}
+	list = g_list_sort (list, intcompare);
+	if (!verify_sort (list, (N_ELEMS*N_ELEMS - N_ELEMS)/2))
+		return FAILED ("wavering list");
 
 	g_list_free (list);
 
